# CORE-Metadata

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml  config_test.toml
proto/: search.proto
src/: loader.rs  search.rs
src/common/: data.rs  error.rs  mod.rs  settings.rs  util.rs
