[package]
name = "core_storage_metadata_loader"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "loader"
path = "src/loader.rs"

[[bin]]
name = "search-server"
path = "src/search.rs"

[dependencies]
async-trait = "0.1"
config = "0.11"
flexi_logger = { version = "0.19", features = ["colors"] }
futures = "0.3"
log = "0.4"
mongodb = "2.0"
prost = "0.9"
rdkafka = { version = "0.27", features = ["cmake-build"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "signal", "sync", "rt-multi-thread"] }
tonic = "0.6"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }