[package]
name = "core_storage_metadata_loader"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "loader"
path = "src/loader.rs"

[[bin]]
name = "search-server"
path = "src/search.rs"

[dependencies]
async-trait = "0.1"
config = "0.11"
flexi_logger = { version = "0.19", features = ["colors"] }
futures = "0.3"
log = "0.4"
mongodb = "2.0"
prost = "0.9"
scienceobjectsdb_rust_api = "0.2.0-rc1"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "signal", "sync", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { version = "0.6", features = ["tls", "tls-roots"] }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }